<resources>
    <string name="app_name">Calculator1</string>
    <string name="Button1">Button</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="button7">Button</string>
    <string name="button8">Button</string>
    <string name="button9">Button</string>
    <string name="button10">Button</string>
    <string name="button11">Button</string>
    <string name="button12">Button</string>
    <string name="button13">Button</string>
    <string name="button14">Button</string>
    <string name="button15">Button</string>
    <string name="Button123">*</string>
    <string name="_1">1</string>
    <string name="plus">plus</string>
    <string name="sev">sev</string>
    <string name="eight">eight</string>
    <string name="six">six</string>
    <string name="nine">nine</string>
    <string name="two">two</string>
    <string name="four">four</string>
    <string name="three">three</string>
    <string name="five">five</string>
    <string name="cle">cle</string>
    <string name="equ">equ</string>
    <string name="zero">zero</string>
    <string name="div">div</string>
    <string name="sub">sub</string>
    <string name="mult">mult</string>
    <string name="add">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="clear">Clear</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="divide">/</string>
    <string name="subt">-</string>
    <string name="multi">*</string>
</resources>